--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,68 +1,180 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_wt_bg"
-    android:orientation="vertical"
-    >
+    android:background="#ebebeb"
+    android:orientation="vertical">
 
-    <include layout="@layout/layout_title_bar" />
-    <EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="手机号码"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="图形验证码"/>
-        <ImageView
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+    <!--标题栏-->
+    <com.sunnybear.library.view.NavigationBar
+        style="@style/style_navigation_bar"
+        android:background="#fff"
+        auto:nav_has_divider="true"
+        auto:nav_left_icon="@drawable/back_selector"
+        auto:nav_main_title="忘记密码"
+        auto:nav_main_title_color="@color/text_color" />
 
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="短信验证码"/>
-        <TextView
-            android:paddingRight="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="获取验证码"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="密码(6-18位)"/>
-        <ImageView
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <com.sunnybear.library.view.CleanableEditText
+            android:id="@+id/et_mobile"
+            style="@style/XiangjiText.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/text_color_white"
+            android:hint="@string/mobile"
+            android:inputType="phone"
+            auto:maxLength="11" />
+        <!--间隔线-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@color/divider_color" />
+
+        <!--图形验证码-->
+        <RelativeLayout
+            android:id="@+id/rl_graph_verify"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_phone"
+            android:background="#fff"
+            android:visibility="visible">
 
-            />
+            <com.sunnybear.library.view.CleanableEditText
+                android:id="@+id/et_graph_verify"
+                style="@style/XiangjiText.EditText"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_toLeftOf="@+id/image_graph_verify"
+                android:background="#fff"
+                android:drawableRight="@drawable/close_selector"
+                android:hint="@string/graph_verify"
+                android:maxLength="4" />
 
-    </RelativeLayout>
+            <!--图形验证码-->
+            <com.sunnybear.library.view.image.ImageDraweeView
+                android:id="@+id/image_graph_verify"
+                android:layout_width="88dp"
+                android:layout_height="32dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp" />
 
-    <Button
-        android:layout_margin="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="完成"/>
+        </RelativeLayout>
+        <!--间隔线-->
+        <View
+            android:id="@+id/v_diviver"
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@color/divider_color" />
+        <!--短信验证码-->
+        <RelativeLayout
+            android:id="@+id/rl_sms_verify"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/v_diviver"
+            android:background="@color/text_color_white"
+            android:paddingRight="8dp">
 
+            <com.sunnybear.library.view.CleanableEditText
+                android:id="@+id/et_sms_verify"
+                style="@style/XiangjiText.EditText"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_toLeftOf="@+id/tb_get_verify"
+                android:background="#fff"
+                android:drawableRight="@drawable/close_selector"
+                android:hint="@string/sms_verify"
+                android:maxLength="4" />
 
+            <com.sunnybear.library.view.TimeButton
+                android:id="@+id/tb_get_verify"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:minHeight="48dp"
+                android:textSize="@dimen/text_size_12sp"
+                auto:click_background="@color/text_main_color_nor"
+                auto:countdown_time="60"
+                auto:text_after="获取验证码($s后重发)"
+                auto:text_before="获取验证码"
+                auto:unclick_background="@color/text_color_gray" />
 
+            <!--竖向间隔线-->
+            <View
+                android:layout_width="1px"
+                android:layout_height="32dp"
+                android:layout_margin="8dp"
+                android:layout_toLeftOf="@id/tb_get_verify"
+                android:background="@color/divider_color" />
 
+            <!--间隔线-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_below="@id/et_sms_verify"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@color/divider_color" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/white"
+            android:orientation="horizontal">
+
+            <com.sunnybear.library.view.CleanableEditText
+                android:id="@+id/et_password"
+                style="@style/XiangjiText.EditText"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="0.8"
+                android:background="@color/white"
+                android:hint="新密码"
+                android:inputType="textPassword" />
+
+            <com.sunnybear.library.view.SwitchButton
+                android:id="@+id/btn_lock"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                auto:norDrawable="@drawable/icon_20_11"
+                auto:selDrawable="@drawable/icon_20_10" />
+        </LinearLayout>
+
+        <!--间隔线-->
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:background="@color/divider_color" />
+
+        <Button
+            android:id="@+id/btn_nextstep"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="#c2c2c2"
+            android:text="完成"
+            android:textColor="#fff" />
+    </LinearLayout>
 </LinearLayout>
