--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,80 +1,216 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img_wt_bg"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <include layout="@layout/layout_title_bar" />
-    <EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="手机号码"/>
+    <!--标题栏-->
+    <com.sunnybear.library.view.NavigationBar
+        style="@style/style_navigation_bar"
+        android:background="@color/transparent"
+        auto:nav_left_icon="@drawable/back_selector"
+        auto:nav_main_title="@string/register_title"
+        auto:nav_main_title_color="@color/text_color" />
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
+        android:layout_height="match_parent">
+        <!--手机号码-->
+        <LinearLayout
+            android:id="@+id/ll_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="图形验证码"/>
-        <ImageView
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:orientation="vertical">
 
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
+            <com.sunnybear.library.view.CleanableEditText
+                android:id="@+id/et_mobile"
+                style="@style/XiangjiText.EditText"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@null"
+                android:drawableRight="@drawable/close_selector"
+                android:hint="@string/mobile"
+                android:inputType="phone"
+                auto:maxLength="11" />
+            <!--间隔线-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@color/divider_color" />
+        </LinearLayout>
+
+        <!--图形验证码-->
+        <RelativeLayout
+            android:id="@+id/rl_graph_verify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="短信验证码"/>
-        <TextView
-            android:paddingRight="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="获取验证码"/>
+            android:layout_below="@+id/ll_phone"
+            android:visibility="visible">
 
-    </RelativeLayout>
+            <com.sunnybear.library.view.CleanableEditText
+                android:id="@+id/et_graph_verify"
+                style="@style/XiangjiText.EditText"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_toLeftOf="@id/image_graph_verify"
+                android:background="@null"
+                android:drawableRight="@drawable/close_selector"
+                android:hint="@string/graph_verify"
+                auto:maxLength="4" />
 
+            <!--图形验证码-->
+            <com.sunnybear.library.view.image.ImageDraweeView
+                android:id="@+id/image_graph_verify"
+                android:layout_width="88dp"
+                android:layout_height="32dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
+            <!--间隔线-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_below="@id/et_graph_verify"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@color/divider_color" />
+        </RelativeLayout>
+
+        <!--短信验证码-->
+        <RelativeLayout
+            android:id="@+id/rl_sms_verify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="密码(6-18位)"/>
-        <ImageView
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
+            android:layout_below="@id/rl_graph_verify"
+            android:paddingRight="8dp">
+
+            <com.sunnybear.library.view.CleanableEditText
+                android:id="@+id/et_sms_verify"
+                style="@style/XiangjiText.EditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/tb_get_verify"
+                android:background="@null"
+                android:drawableRight="@drawable/close_selector"
+                android:hint="@string/sms_verify"
+                android:minHeight="48dp" />
+
+            <com.sunnybear.library.view.TimeButton
+                android:id="@+id/tb_get_verify"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:minHeight="48dp"
+                android:textSize="@dimen/text_size_12sp"
+                auto:click_background="@color/text_main_color_nor"
+                auto:countdown_time="60"
+                auto:text_after="获取验证码($s后重发)"
+                auto:text_before="获取验证码"
+                auto:unclick_background="@color/text_color_gray" />
+
+            <!--竖向间隔线-->
+            <View
+                android:layout_width="1px"
+                android:layout_height="32dp"
+                android:layout_margin="8dp"
+                android:layout_toLeftOf="@id/tb_get_verify"
+                android:background="@color/divider_color" />
+            <!--间隔线-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_below="@id/tb_get_verify"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@color/divider_color" />
+        </RelativeLayout>
+
+        <!--注册密码-->
+        <LinearLayout
+            android:id="@+id/ll_password"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/rl_sms_verify"
+            android:orientation="vertical">
 
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    </RelativeLayout>
-    <Button
-        android:layout_margin="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="下一步"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/register_tv"
-            android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
+                <com.sunnybear.library.view.CleanableEditText
+                    android:id="@+id/et_password"
+                    style="@style/XiangjiText.EditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_weight="0.8"
+                    android:background="@null"
+                    android:drawableRight="@drawable/close_selector"
+                    android:hint="@string/regist_password"
+                    android:inputType="textPassword"
+                    android:maxLength="18" />
+
+                <com.sunnybear.library.view.SwitchButton
+                    android:id="@+id/btn_is_look"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    auto:norDrawable="@drawable/icon_20_11"
+                    auto:selDrawable="@drawable/icon_20_10" />
+            </LinearLayout>
+
+            <!--间隔线-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:background="@color/divider_color" />
+        </LinearLayout>
+
+        <!--下一步-->
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="点击下一步表示您已同意 用户服务协议 "/>
+            android:layout_below="@id/ll_password"
+            android:layout_margin="16dp"
+            android:background="@drawable/btn_los_focus"
+            android:clickable="false"
+            android:text="@string/next"
+            android:textColor="#FFFFFF"
+            android:textSize="@dimen/text_size_16sp" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btn_next"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="8dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="点击下一步表示您已同意"
+                android:textColor="@color/text_main_color_sel"
+                android:textSize="@dimen/text_size_16sp" />
+
+            <TextView
+                android:id="@+id/tv_user_protocol"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="《用户服务协议》"
+                android:textColor="@color/text_main_color_sel"
+                android:textSize="@dimen/text_size_16sp" />
+        </LinearLayout>
     </RelativeLayout>
-
-
-
 </LinearLayout>
