--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,5 +29,14 @@
     <color name="color_eeefea">#eeefea</color>
     <color name="color_c8c7c5">#c8c7c5</color>
     <color name="color_bfbfbf">#bfbfbf</color>
+    <!--主颜色-->
+    <color name="text_main_color_sel">#B57DE4</color>
+    <color name="text_main_color_nor">#985EC9</color>
+
+    <color name="edit_text_background">#FFF</color>
+
+    <color name="color_C2C2C2">#C2C2C2</color>
+
+    <color name="text_color_gray">#959595</color>
 
 </resources>
