--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -184,7 +184,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/show_sticker_btn"
+                android:id="@+id/show_sticker_ll"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
