--- a/app/src/main/res/layout/activity_perfect.xml
+++ b/app/src/main/res/layout/activity_perfect.xml
@@ -4,7 +4,7 @@
               xmlns:auto="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@drawable/img_wt_bg"
+              android:background="@drawable/img_bg_signup"
               android:orientation="vertical">
 
     <!--标题栏-->
