--- a/app/src/main/res/layout/activity_photo_editor.xml
+++ b/app/src/main/res/layout/activity_photo_editor.xml
@@ -53,7 +53,7 @@
                 android:paddingRight="@dimen/dimens_10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_save"
+                android:id="@+id/tv_save"
                 android:textSize="18dp"
                 android:textColor="@color/white"
                 android:text="保存/分享" />
@@ -76,7 +76,7 @@
             android:layout_marginBottom="@dimen/dimens_10dp"
             android:orientation="horizontal">
             <LinearLayout
-                android:id="@+id/choice_water_mark_btn"
+                android:id="@+id/choice_water_mark_ll"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -99,7 +99,7 @@
                     android:textSize="@dimen/dimens_14sp" />
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/btn_picture_filter"
+                android:id="@+id/ll_picture_filter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -122,7 +122,7 @@
                     android:textSize="@dimen/dimens_14sp" />
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/btn_dynamic_filter"
+                android:id="@+id/ll_dynamic_filter"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:layout_weight="1"
@@ -147,7 +147,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/btn_cut_image"
+                android:id="@+id/ll_cut_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
