--- a/app/src/main/res/layout/layout_management_finished_collage_grid_item.xml
+++ b/app/src/main/res/layout/layout_management_finished_collage_grid_item.xml
@@ -1,14 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_main"
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:background="@color/white">
+        android:layout_width="165dp"
+        android:layout_height="220dp">
 
         <com.putao.camera.editor.view.FilterEffectThumbnailView
             android:id="@+id/collage_download_iv"
@@ -30,14 +30,6 @@
             android:visibility="invisible" />
 
         <ImageView
-        android:id="@+id/collage_photo_ok_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-            android:src="@drawable/photo_ok_btn"
-        android:visibility="invisible" />
-        <ImageView
             android:id="@+id/collage_photo_new_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,27 +38,14 @@
             android:src="@drawable/photo_new_icon"
             android:visibility="invisible" />
         <ImageView
-            android:id="@+id/collage_photo_download_iv"
+            android:id="@+id/iv_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/btn_22_01"
-            android:visibility="visible" />
-        <ProgressBar
-            android:id="@+id/pb_download"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:paddingBottom="10dp"
-            android:paddingRight="10dp"
-            android:src="@drawable/btn_22_01"
-            android:visibility="gone" />
-
-
+            android:layout_marginRight="@dimen/dimens_10dp"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/check_box_nor" />
     </RelativeLayout>
 
 </LinearLayout>
