--- a/app/src/main/res/layout/layout_management_water_mark_grid_item.xml
+++ b/app/src/main/res/layout/layout_management_water_mark_grid_item.xml
@@ -22,7 +22,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop" />
 
-        <ProgressBar
+      <!--  <ProgressBar
             android:id="@+id/download_status_pb"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="150dp"
@@ -34,7 +34,7 @@
             android:orientation="horizontal"
             android:progress="0"
             android:progressDrawable="@drawable/download_progressbar"
-            android:visibility="invisible" />
+            android:visibility="invisible" />-->
 
         <ImageView
             android:id="@+id/water_mark_photo_ok_iv"
