--- a/app/src/main/res/layout/activity_water_mark_category_detail.xml
+++ b/app/src/main/res/layout/activity_water_mark_category_detail.xml
@@ -29,6 +29,7 @@
             android:textColor="@color/grey_light" />
 
         <Button
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
             android:id="@+id/download_btn"
