--- a/app/src/main/res/layout/activity_photo_select.xml
+++ b/app/src/main/res/layout/activity_photo_select.xml
@@ -6,7 +6,97 @@
     android:orientation="vertical">
     <!-- 标题栏 -->
 
-    <include layout="@layout/layout_title_bar" />
+    <RelativeLayout
+        android:id="@+id/title_bar_rl"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+
+        android:background="#ff5859">
+
+        <LinearLayout
+            android:id="@+id/left_btn_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/back_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:paddingLeft="6dp"
+                android:background="@drawable/btn_20_back_w_nor"
+                android:textColor="@color/title_text_color" />
+            <TextView
+                android:id="@+id/back_tv"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="返回"/>
+
+
+            <Button
+                android:id="@+id/camera_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:background="@drawable/film_camera"
+                android:textColor="@color/title_text_color"
+                android:visibility="gone" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="贴纸列表"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimens_20dp" />
+            <ImageView
+                android:id="@+id/iv_icon"
+                android:paddingLeft="3dp"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/right_btn_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <Button
+                android:background="#ff5859"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/right_btn"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/white"
+                android:textSize="@dimen/activity_title_size" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <!--<include layout="@layout/layout_title_bar" />-->
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -56,24 +146,24 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:gravity="center"
-                        android:visibility="invisible"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:visibility="invisible">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:text="您还没有照片"
                             android:textColor="@color/grey_light"
-                            android:layout_margin="10dp"
-                            android:textSize="30dp"
-                            android:text="您还没有照片" />
+                            android:textSize="30dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/grey_dark"
                             android:layout_margin="10dp"
-                            android:textSize="16dp"
-                            android:text="开始使用葡萄相机记录您的生活吧" />
+                            android:text="开始使用葡萄相机记录您的生活吧"
+                            android:textColor="@color/grey_dark"
+                            android:textSize="16dp" />
 
                         <ImageView
                             android:id="@+id/body_iv_none_camera"
@@ -92,18 +182,18 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:background="#000000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="#000000"
                     android:orientation="horizontal"
                     android:paddingLeft="10dp"
                     >
 
                     <TextView
-
+                        android:gravity="center_vertical"
                         android:id="@+id/tv_photo_num"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="@string/collage_select_image"
                         android:textColor="@color/white"
@@ -114,17 +204,18 @@
                         android:id="@+id/btn_ok"
                         style="@style/button.red"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:background="@drawable/background_view_grey"
                         android:text="下一步" />
+
 
                 </LinearLayout>
 
                 <HorizontalScrollView
-                    android:background="#000000"
                     android:layout_width="match_parent"
                     android:layout_height="95dp"
                     android:layout_above="@id/camera_button_bar"
+                    android:background="#000000"
                     android:scrollbars="none">
 
                     <LinearLayout
