--- a/app/src/main/res/layout/activity_photo_selected_item.xml
+++ b/app/src/main/res/layout/activity_photo_selected_item.xml
@@ -16,15 +16,17 @@
             android:layout_height="70dp"
             android:layout_centerInParent="true"
             android:scaleType="centerCrop" />
+        <ImageView
+            android:id="@+id/remove_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/icon_20_27" />
+
     </RelativeLayout>
 
 
-    <ImageView
-        android:id="@+id/remove_image"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="56dp"
-        android:background="@drawable/jigsaw_button_delete" />
+
 
 </RelativeLayout>
