--- a/app/src/main/res/layout/activity_photo_editor_dynamic.xml
+++ b/app/src/main/res/layout/activity_photo_editor_dynamic.xml
@@ -92,9 +92,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#252525"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="horizontal">
+            </LinearLayout>
 
         </HorizontalScrollView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/id_recyclerview_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_centerVertical="true"
+            android:visibility="gone"
+            android:background="#FF0000"
+            android:scrollbars="none" />
     </LinearLayout>
 
 </RelativeLayout>
